--- a/.github/workflows/deploy_nephrorx.yml
+++ b/.github/workflows/deploy_nephrorx.yml
@@ -1,14 +1,10 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-# More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
-
 name: Build and deploy Python app to Azure Web App - NephroRx
 
 on:
   push:
     branches:
-      - deploy          # runs when you push to the 'deploy' branch
-  workflow_dispatch:    # allows manual runs from the Actions tab
+      - deploy
+  workflow_dispatch:
 
 jobs:
   build:
@@ -21,14 +17,16 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.14'
+          python-version: '3.11'
 
-      - name: Install dependencies and create deployment package
+      # Just package the backend folder; no pip install here.
+      - name: Create deployment package (backend)
         working-directory: ./backend
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          # Create a zip of ONLY the backend folder contents
+          # Optional sanity check: make sure app.py exists
+          ls -la
+          test -f app.py || (echo "app.py not found in backend/" && exit 1)
+          # Zip ONLY the backend contents
           zip -r ../backend.zip .
 
       - name: Upload artifact for deployment job
@@ -41,8 +39,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     permissions:
-      id-token: write    # required for azure/login OIDC
-      contents: read     # required for actions/checkout (not used here but fine)
+      id-token: write
+      contents: read
 
     steps:
       - name: Download artifact from build job
@@ -61,7 +59,6 @@ jobs:
         uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
         with:
-          app-name: 'NephroRx'        # your App Service name
+          app-name: 'NephroRx'
           slot-name: 'Production'
-          package: backend.zip        # the zip we built in the build job
-
+          package: backend.zip
