Modify GitHub Actions workflow for deployment
Updated workflow to trigger on 'deploy' branch and added publish profile for deployment.

--- a/.github/workflows/deploy_nephrorx.yml
+++ b/.github/workflows/deploy_nephrorx.yml
@@ -3,7 +3,7 @@ name: Build and deploy Python app to Azure Web App - NephroRx
 on:
   push:
     branches:
-      - main
+      - deploy
   workflow_dispatch:
 
 jobs:
@@ -14,19 +14,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.14'
-
-      # Just package the backend folder; no pip install here.
       - name: Create deployment package (backend)
         working-directory: ./backend
         run: |
-          # Optional sanity check: make sure app.py exists
           ls -la
           test -f app.py || (echo "app.py not found in backend/" && exit 1)
-          # Zip ONLY the backend contents
           zip -r ../backend.zip .
 
       - name: Upload artifact for deployment job
@@ -38,9 +30,6 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    permissions:
-      id-token: write
-      contents: read
 
     steps:
       - name: Download artifact from build job
@@ -48,19 +37,10 @@ jobs:
         with:
           name: backend-package
 
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_82C7036AE60A426389CD7DC81CC0A7D3 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_43FCA8F8F8014401A48C5322F6B45B80 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_5E7D7323C5A44EAC83384B58CF2AF0FF }}
-
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
-        id: deploy-to-webapp
         with:
-          app-name: 'NephroRx'
+          app-name: 'NephroRx'                      # your App Service name
           slot-name: 'Production'
           package: backend.zip
-
-
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE }}
